--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,11 @@
   "name": "devtron",
   "version": "1.0",
   "devtools_page": "static/devtron.html",
+  "manifest_version": 2,
+  "content_security_policy": "default-src 'self'",
   "content_scripts": [
     {
-      "matches": ["*"],
+      "matches": ["<all_urls>"],
       "js": ["out/browser-globals.js"]
     }
   ]
